# internal/product-service/transport/http/router.go
@@ -29,6 +29,7 @@ func (r *Router) Register(app *fiber.App) {
 	getProduct := r.handlers.GetProduct()
 	searchProducts := r.handlers.SearchProducts()
 	toggleFavorite := r.handlers.ToggleFavorite()
+	getUserFavorites := r.handlers.GetUserFavorites()
 
 	app.Get("/hello", r.handlers.Hello)
 	app.Post("/create", handler.HandleWithFiber[controller.CreateProductRequest, controller.CreateProductResponse](createProduct))
@@ -38,4 +39,5 @@ func (r *Router) Register(app *fiber.App) {
 	app.Get("/product/:product_id", handler.HandleWithFiber[controller.GetProductRequest, controller.GetProductResponse](getProduct))
 	app.Get("/search", handler.HandleWithFiber[controller.SearchProductsRequest, controller.SearchProductsResponse](searchProducts))
 	app.Post("/toggle-favorite/:product_id", handler.HandleWithFiber[controller.ToggleFavoriteRequest, controller.ToggleFavoriteResponse](toggleFavorite))
+	app.Get("/favorites", handler.HandleWithFiber[controller.GetFavoritesRequest, controller.GetFavoritesResponse](getUserFavorites))
 }
